syntax = "proto3";

package version;

option go_package = "version";

// Version service to check version of QAN-API.
service Version {
  // HandleVersion return build version of QAN-API.
  rpc HandleVersion(VersionRequest) returns (VersionReply);
}

// The request message containing the requestor name.
message VersionRequest {
  string name = 1;
}

// The response message containing the version of QAN-API
message VersionReply {
  string version = 1;
}
